[project]
name = "mov"
version = "0.2/api"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mov-ping = "mov.cli:ping"

[tool.pytest.ini_options]
pythonpath = ["src/", "."]

[project.urls]
Homepage = "https://github.com/tbongkim03/mov"
Issues = "https://github.com/tbongkim03/mov/issues"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
